force-app/main/default/objects/lb2bt__Loyalty_Reward_Point__c/lb2bt__Loyalty_Reward_Point__c.object-meta.xml
<CustomObject>
    <label>Loyalty Reward Point</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Loyalty Reward Point Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Reward Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>