force-app/main/default/objects/lb2bt__Loyalty_Reward_Point__c/fields/lb2bt__Account__c.field-meta.xml
<CustomField>
    <fullName>lb2bt__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loyalty Reward Points (Account)</relationshipLabel>
    <relationshipName>Loyalty_Reward_Points1</relationshipName>
    <type>Lookup</type>
</CustomField>