force-app/main/default/objects/lb2bt__Loyalty_Reward_Point__c/fields/lb2bt__Order__c.field-meta.xml
<CustomField>
    <fullName>lb2bt__Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Loyalty Reward Points</relationshipLabel>
    <relationshipName>Loyalty_Reward_Points</relationshipName>
    <type>Lookup</type>
</CustomField>