force-app/main/default/objects/lb2bt__Loyalty_Reward_Point__c/fields/lb2bt__Point__c.field-meta.xml
<CustomField>
    <fullName>lb2bt__Point__c</fullName>
    <label>Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>