force-app/main/default/objects/lb2bt__Loyalty_Reward_Point__c/fields/lb2bt__Type__c.field-meta.xml
<CustomField>
    <fullName>lb2bt__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Earned</fullName>
            </value>
            <value>
                <fullName>Spent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>